--- a/bugzilla_2633.config
+++ b/bugzilla_2633.config
@@ -1,6 +1,6 @@
 [bugzilla-2633]
 trace_cmd=/opt/fuzzer/bugzilla-2633/tiff2ps;***
-crash_cmd=/opt/fuzzer/bugzilla-2633/tiff2ps.redfat;***
+crash_cmd=/opt/fuzzer/bugzilla-2633/tiff2ps;***
 bin_path=/opt/fuzzer/bugzilla-2633/tiff2ps
 poc=/opt/fuzzer/bugzilla-2633/exploit
 poc_fmt=bfile
